2007-02-08  Roman Kennke  <kennke@aicas.com>

	PR 30347
	* javax/swing/JViewport.java
	(scrollRectToVisible): Use correct X/Y offset for calculations.
	(paintBackingStore): Update backbuffer when we are not the paint
	root.

2007-02-08  Roman Kennke  <kennke@aicas.com>

	* java/awt/image/SinglePixelPackedSampleModel.java
	(getDataElements(int,int,Object,DataBuffer)):
	Replace DataBuffer using method with simple
	switch. This does not check for the exact type (class) of the
	DataBuffer but instead checks the transfer type.
	(getDataElements(int,int,int,intObject,DataBuffer)): Removed.
	(setDataElements): Fixed indentation.
	(setPixels): Removed unused statement.

2007-02-07  Tom Tromey  <tromey@redhat.com>

	* tools/gnu/classpath/tools/javah/PathOptionGroup.java
	(PathOptionGroup): Allow '-cp' as well.

2007-02-07  Chris Burdess  <dog@gnu.org>

	Fixes PR 30718.
	* gnu/xml/dom/ls/SAXEventSink.java: Add public accessor/mutators.
	* gnu/xml/transform/XSLURIResolver.java: Add support for custom
	  SAXSources without a backing URL or stream.

2007-02-06  Tom Tromey  <tromey@redhat.com>

	PR libgcj/30707:
	* tools/gnu/classpath/tools/javah/JniIncludePrinter.java
	(printClass): Always print a header.

2007-02-06  Chris Burdess  <dog@gnu.org>

	Fixes PR 27710.
	* gnu/xml/dom/DomDocumentBuilderFactory.java: Fall back to synchronous
	  LSParser if implementation does not support asynchronous.
	* gnu/xml/stream/XMLParser.java,
	  gnu/xml/stream/XIncludeFilter.java: Use custom code instead of
	  java.net.URL to resolve to an an absolute URI, to avoid nonexistent
	  protocol handler problems.

2007-02-05  Andrew Haley  <aph@redhat.com>

        PR cp-tools/30706
        * tools/gnu/classpath/tools/javah/JniIncludePrinter.java:
        (printClass): Replace '/' in filenames with '_'.
        * tools/gnu/classpath/tools/javah/JniStubPrinter.java
        (printClass): Likewise.

2007-02-05  Tom Tromey  <tromey@redhat.com>
