@@ -1,3 +1,9 @@
+2007-02-09  Ito Kazumitsu  <kaz@maczuka.gcd.org>
+
+	Fixes bug #30732
+	* gnu/java/util/regex/RETokenChar.java(chain): Check whether the next
+	token has a next token.
+
 2007-02-08  Roman Kennke  <kennke@aicas.com>
 
 	PR 30347
